--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "description": "Experience a beautiful photo from Unsplash every time you open a new tab.",
     "icons": {
-      "AfricanAmer_Space": "icons/AfricanAmerSpace.png",
+      "AfricanAmerSpace": "icons/AfricanAmerSpace.png",
       "blackSpace": "icons/blackSpace.png",
       "Blacksuperheroes": "icons/Blacksuperheroes.png",
       "galaxyHeroes": "icons/galaxyHeroes.png"
