--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "name": "freshtab",
     "version": "1.0.0",
     "description": "Experience a beautiful photo from Unsplash every time you open a new tab.",
-    "icons": {
-      "AfricanAmerSpace": "icons/AfricanAmerSpace.png",
+    "icons": 
+    {
       "blackSpace": "icons/blackSpace.png",
       "Blacksuperheroes": "icons/Blacksuperheroes.png",
       "galaxyHeroes": "icons/galaxyHeroes.png"
